About - Column Layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,41 @@ About
 /* section add to globals */
 /* title add to globals */
 /* section center add to globals */
-
+.about-image,
+.about-info {
+  margin-bottom: 2rem;
+}
+@media screen and (min-width: 992px) {
+  .about-center {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .about-image,
+  .about-info {
+    flex: 0 0 calc(50% - 2rem);
+    align-self: center;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .about-image::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 0.5rem solid var(--clr-primary-5);
+    box-sizing: border-box;
+    top: -1.5rem;
+    left: -1.5rem;
+  }
+  .about-image {
+    position: relative;
+  }
+  .about-photo {
+    position: relative;
+  }
+}
 /*
 =============== 
 Services
