--- a/css/styles.css
+++ b/css/styles.css
@@ -359,6 +359,19 @@ Featured Tours
 .tour-info {
   padding: 1.25rem 1.5rem;
 }
+.tour-title {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.tour-title p,
+.tour-title h4 {
+  margin-bottom: 0.75rem;
+  line-height: 1.25;
+}
+.tour-title p {
+  color: var(--clr-grey-7);
+}
 .tour-footer {
   display: flex;
   flex-wrap: wrap;
