--- a/css/styles.css
+++ b/css/styles.css
@@ -407,7 +407,62 @@ Featured Tours
 Contact
 ===============
 */
-
+.contact {
+  background: var(--clr-primary-5);
+}
+.contact-title {
+  color: var(--clr-white);
+}
+.contact-title p {
+  color: var(--clr-primary-8);
+  text-transform: capitalize;
+}
+.contact-form {
+  display: flex;
+  max-width: 28rem;
+}
+.form-control {
+  flex: 1 1 auto;
+  color: var(--clr-grey-5);
+}
+.form-control,
+.submit-btn {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-weight: 300;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  font-family: var(--ff-primary);
+  border: transparent;
+}
+.form-control::placeholder {
+  color: inherit;
+}
+.submit-btn {
+  color: var(--clr-primary-1);
+  background: var(--clr-primary-8);
+  transition: var(--transition);
+  cursor: pointer;
+  margin-left: 0.5rem;
+}
+.submit-btn:hover {
+  background: var(--clr-grey-1);
+  color: var(--clr-primary-5);
+}
+@media screen and (min-width: 992px) {
+  .contact-center {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .contact-form {
+    align-self: flex-start;
+    flex: 1 1 auto;
+    max-width: 100%;
+    padding-left: 2rem;
+  }
+}
 /*
 =============== 
 Gallery
