--- a/css/styles.css
+++ b/css/styles.css
@@ -468,7 +468,46 @@ Contact
 Gallery
 ===============
 */
-
+.gallery-image-container {
+  position: relative;
+  background: var(--clr-primary-5);
+}
+.gallery-image {
+  height: 17rem;
+  object-fit: cover;
+  transition: var(--transition);
+}
+.gallery-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 2rem;
+  color: white;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  opacity: 0;
+  transition: var(--transition);
+}
+.gallery-image-container:hover .gallery-image {
+  opacity: 0.5;
+}
+.gallery-image-container:hover .gallery-icon {
+  opacity: 1;
+}
+@media screen and (min-width: 768px) {
+  .gallery-center {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .gallery-image-container {
+    flex: 0 0 50%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .gallery-image-container {
+    flex: 0 0 25%;
+  }
+}
 /*
 =============== 
 Footer
