--- a/css/styles.css
+++ b/css/styles.css
@@ -473,8 +473,8 @@ Gallery
   background: var(--clr-primary-5);
 }
 .gallery-image {
-  height: 17rem;
-  object-fit: cover;
+  /* height: 17rem;
+  object-fit: cover; */
   transition: var(--transition);
 }
 .gallery-icon {
