--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,15 @@ Navbar
 .nav-icons {
   display: none;
 }
+/* 280px */
+.nav-links {
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+.show-links {
+  height: 280px;
+}
 /*
 =============== 
 Hero
