--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ p {
   letter-spacing: var(--spacing);
   display: inline-block;
   /* font-weight: 700; */
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   font-size: 0.875rem;
   border: 2px solid transparent;
@@ -184,8 +185,11 @@ Navbar
   margin: 0 auto;
 }
 .nav-header {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
   align-items: center;
   padding: 1rem 2rem;
 }
@@ -194,10 +198,12 @@ Navbar
   border: transparent;
   font-size: 1.5rem;
   color: var(--clr-primary-5);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
 }
 .nav-toggle:hover {
+  -webkit-transform: scale(1.2);
   transform: scale(1.2);
 }
 .nav-link {
@@ -207,6 +213,7 @@ Navbar
   color: var(--clr-grey-1);
   text-transform: capitalize;
   letter-spacing: var(--spacing);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
 }
@@ -222,6 +229,7 @@ Navbar
 .nav-links {
   height: 0;
   overflow: hidden;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .show-links {
@@ -236,8 +244,11 @@ Navbar
     display: none;
   }
   .nav-center {
+    display: -webkit-box;
     display: flex;
+    -webkit-box-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
     align-items: center;
     /* optional */
     flex-wrap: wrap;
@@ -247,6 +258,7 @@ Navbar
   }
   .nav-links {
     height: auto;
+    display: -webkit-box;
     display: flex;
   }
   .nav-link {
@@ -259,12 +271,14 @@ Navbar
     color: var(--clr-primary-8);
   }
   .nav-icons {
+    display: -webkit-box;
     display: flex;
   }
   .nav-icon {
     color: var(--clr-primary-5);
     margin-right: 0.7rem;
     font-size: 1.2rem;
+    -webkit-transition: var(--transition);
     transition: var(--transition);
   }
   .nav-icon:hover {
@@ -279,8 +293,11 @@ Hero
 .hero {
   min-height: 100vh;
   background: var(--clr-primary-5);
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
   align-items: center;
 }
 .hero-banner {
@@ -311,6 +328,14 @@ Hero
 }
 @media screen and (min-width: 768px) {
   .hero {
+    background: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        from(rgba(44, 174, 186, 0.7)),
+        to(rgb(0, 0, 0, 0.7))
+      ),
+      url("../images/main.jpeg") center/cover no-repeat;
     background: linear-gradient(rgba(44, 174, 186, 0.7), rgb(0, 0, 0, 0.7)),
       url("../images/main.jpeg") center/cover no-repeat;
   }
@@ -335,12 +360,15 @@ About
 }
 @media screen and (min-width: 992px) {
   .about-center {
+    display: -webkit-box;
     display: flex;
+    -webkit-box-pack: justify;
     justify-content: space-between;
     flex-wrap: wrap;
   }
   .about-image,
   .about-info {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(50% - 2rem);
     align-self: center;
     margin-bottom: 0;
@@ -391,23 +419,28 @@ Services
 }
 @media screen and (min-width: 576px) {
   .services-center {
+    display: -webkit-box;
     display: flex;
+    -webkit-box-pack: justify;
     justify-content: space-between;
     flex-wrap: wrap;
   }
   .service {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(50% - 1rem);
     margin-bottom: 1rem;
   }
 }
 @media screen and (min-width: 992px) {
   .service {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(33.33% - 1rem);
     margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1170px) {
   .service {
+    display: -webkit-box;
     display: flex;
     text-align: left;
   }
@@ -430,10 +463,12 @@ Featured Tours
   background: var(--clr-grey-10);
   margin-bottom: 2rem;
   box-shadow: var(--light-shadow);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .tour-card:hover {
   box-shadow: var(--dark-shadow);
+  -webkit-transform: scale(1.02);
   transform: scale(1.02);
 }
 .tour-image-container {
@@ -441,6 +476,7 @@ Featured Tours
 }
 .tour-image {
   height: 15rem;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .tour-date {
@@ -457,7 +493,9 @@ Featured Tours
   padding: 1.25rem 1.5rem;
 }
 .tour-title {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: justify;
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -470,9 +508,12 @@ Featured Tours
   color: var(--clr-grey-7);
 }
 .tour-footer {
+  display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
+  -webkit-box-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
   align-items: center;
 }
 .tour-footer p {
@@ -486,16 +527,20 @@ Featured Tours
 }
 @media screen and (min-width: 768px) {
   .featured-center {
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
+    -webkit-box-pack: justify;
     justify-content: space-between;
   }
   .tour-card {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(50% - 2rem);
   }
 }
 @media screen and (min-width: 1170px) {
   .tour-card {
+    -webkit-box-flex: 0;
     flex: 0 0 calc(33.333% - 2rem);
   }
 }
@@ -515,10 +560,12 @@ Contact
   text-transform: capitalize;
 }
 .contact-form {
+  display: -webkit-box;
   display: flex;
   max-width: 28rem;
 }
 .form-control {
+  -webkit-box-flex: 1;
   flex: 1 1 auto;
   color: var(--clr-grey-5);
 }
@@ -533,12 +580,25 @@ Contact
   font-family: var(--ff-primary);
   border: transparent;
 }
+.form-control::-webkit-input-placeholder {
+  color: inherit;
+}
+.form-control::-moz-placeholder {
+  color: inherit;
+}
+.form-control:-ms-input-placeholder {
+  color: inherit;
+}
+.form-control::-ms-input-placeholder {
+  color: inherit;
+}
 .form-control::placeholder {
   color: inherit;
 }
 .submit-btn {
   color: var(--clr-primary-1);
   background: var(--clr-primary-8);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
   margin-left: 0.5rem;
@@ -549,12 +609,15 @@ Contact
 }
 @media screen and (min-width: 992px) {
   .contact-center {
+    display: -webkit-box;
     display: flex;
+    -webkit-box-pack: justify;
     justify-content: space-between;
     flex-wrap: wrap;
   }
   .contact-form {
     align-self: flex-start;
+    -webkit-box-flex: 1;
     flex: 1 1 auto;
     max-width: 100%;
     padding-left: 2rem;
@@ -572,6 +635,7 @@ Gallery
 .gallery-image {
   /* height: 17rem;
   object-fit: cover; */
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .gallery-icon {
@@ -580,9 +644,11 @@ Gallery
   left: 50%;
   font-size: 2rem;
   color: white;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   cursor: pointer;
   opacity: 0;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .gallery-image-container:hover .gallery-image {
@@ -593,15 +659,18 @@ Gallery
 }
 @media screen and (min-width: 768px) {
   .gallery-center {
+    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
   }
   .gallery-image-container {
+    -webkit-box-flex: 0;
     flex: 0 0 50%;
   }
 }
 @media screen and (min-width: 992px) {
   .gallery-image-container {
+    -webkit-box-flex: 0;
     flex: 0 0 25%;
   }
 }
@@ -618,7 +687,9 @@ Footer
 }
 .footer-links,
 .footer-icons {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: center;
   justify-content: center;
   flex-wrap: wrap;
   margin-bottom: 1.5rem;
@@ -629,6 +700,7 @@ Footer
   font-size: 1rem;
   margin-right: 1rem;
   letter-spacing: var(--spacing);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .footer-link:hover {
@@ -638,6 +710,7 @@ Footer
   font-size: 2rem;
   margin-right: 1rem;
   color: var(--clr-primary-8);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .footer-icon:hover {
